--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -55,7 +55,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_expand_more" />
+                    android:src="@drawable/ic_exp_more_2" />
 
             </RelativeLayout>
 
@@ -81,7 +81,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
                     android:layout_below="@id/cycleExsRecView"
-                    android:src="@drawable/ic_expand_less"/>
+                    android:src="@drawable/ic_exp_less_2"/>
             </RelativeLayout>
         </RelativeLayout>
 
