--- a/app/src/main/res/layout/exercise_queue_list_item.xml
+++ b/app/src/main/res/layout/exercise_queue_list_item.xml
@@ -56,7 +56,7 @@
                     android:paddingBottom="6dp"
                     android:text="Exercise"
                     android:textSize="20sp"
-
+                    android:textColor="@color/black"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +73,7 @@
                     android:textAppearance="?attr/textAppearanceHeadline4"
                     app:layout_constraintEnd_toStartOf="@+id/exerciseReps"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:textColor="@color/black"
                     android:layout_marginEnd="10dp"
                     />
 
@@ -80,12 +81,13 @@
                     android:id="@+id/exerciseReps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="x12"
                     android:layout_marginEnd="10dp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="x12"
+                    android:textColor="@color/black"
                     android:textAppearance="?attr/textAppearanceHeadline4"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
