--- a/app/src/main/res/layout/routine_execution_alt.xml
+++ b/app/src/main/res/layout/routine_execution_alt.xml
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="56dp"
                     android:paddingTop="6dp"
-
+                    android:textColor="@color/black"
                     android:paddingBottom="6dp"
                     android:text="Exercise"
                     android:textSize="20sp"
@@ -108,6 +108,8 @@
                     android:layout_marginBottom="10dp"
                     android:fontFamily="@font/google_sans_italic"
                     android:text="Type of exercise"
+                    android:textColor="@color/black"
+                    android:alpha="0.6"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/name" />
@@ -128,10 +130,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="20''"
+                        android:textColor="@color/black"
                         android:textAppearance="?attr/textAppearanceHeadline4" />
 
                     <TextView
                         android:id="@+id/currentReps"
+                        android:textColor="@color/black"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="x12"
