--- a/app/src/main/res/layout/routine_execution_alt.xml
+++ b/app/src/main/res/layout/routine_execution_alt.xml
@@ -35,7 +35,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:text="Current exercise"
+        android:text="@string/current_exercise"
         android:textAppearance="?attr/textAppearanceHeadline4"
         app:layout_constraintTop_toBottomOf="@+id/top"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:text="Next exercises"
+        android:text="@string/next_exercises"
         android:textAppearance="?attr/textAppearanceHeadline4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentExercise" />
