--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -37,5 +37,14 @@
     </LinearLayout>
 
 
-    <include layout="@layout/classic_divider" />
+    <View
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/primaryTextColor"
+        android:layout_height="4dp" android:layout_width="match_parent"
+        >
+
+    </View>
 </LinearLayout>
